# cppgrad

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yaml
src/: main.cpp  module.hpp  neuron.cpp  neuron.hpp  value.cpp  value.hpp
tests/: neuron_test.cpp  value_arithmetic_test.cpp  value_construction_test.cpp  value_grad_test.cpp  value_gradient_test.cpp  value_test.cpp  value_utility.cpp
